fix: chatInfoModal, chatList logic, chatwindow logic
